@@ -251,6 +251,12 @@ $string['otherlanguage']='Other Language';
 $string['refused']='Refused';
 $string['spanish']='Spanish';
 $string['chinese']='Chinese';
+$string['arabic']='Arabic';
+$string['czech']='Czech';
+$string['dutch']='Dutch/Flemish';
+$string['danish']='Danish';
+$string['polish']='Polish';
+$string['finnish']='Finnish';
 /*
 $string['']='Acholi';
 $string['']='Adangme';
@@ -262,7 +268,6 @@ $string['']='Akan (Twi/Asante)';
 $string['']='Albanian/Shqip';
 $string['']='Alur';
 $string['']='Amharic';
-$string['arabic']='Arabic';
 $string['']='Arabic (Any Other)';
 $string['']='Arabic (Algeria)';
 $string['']='Arabic (Iraq)';
@@ -308,12 +313,9 @@ $string['']='Cornish';
 $string['']='Chitrali/Khowar';
 $string['']='Chichewa/Nyanja';
 $string['']='Welsh/Cymraeg';
-$string['']='Czech';
-$string['']='Danish';
 $string['']='Dagaare';
 $string['']='Dagbane';
 $string['']='Dinka/Jieng';
-$string['']='Dutch/Flemish';
 $string['']='Dzongkha/Bhutanese';
 $string['']='Ebira';
 $string['']='Edo/Bini';
@@ -324,7 +326,6 @@ $string['']='Ewe';
 $string['']='Ewondo';
 $string['']='Fang';
 $string['']='Fijian';
-$string['']='Finnish';
 $string['']='Fon';
 */
 $string['french']='French';
@@ -363,19 +364,20 @@ $string['']='Itsekiri';
 $string['']='Icelandic';
 */
 $string['italian']='Italian';
+$string['japanese']='Japanese';
+$string['kazakh']='Kazakh';
+$string['korean']='Korean';
 /*
 $string['']='Italian (Any Other)';
 $string['']='Italian (Napoletan)';
 $string['']='Italian (Sicilian)';
 $string['']='Javanese';
 $string['']='Jinghpaw/Kachin';
-$string['']='Japanese';
 $string['']='Kikamba';
 $string['']='Kannada';
 $string['']='Karen (Any)';
 $string['']='Kashmiri';
 $string['']='Kanuri';
-$string['']='Kazakh';
 $string['']='Katchi';
 $string['']='Kirghiz/Kyrgyz';
 $string['']='Khasi';
@@ -389,7 +391,6 @@ $string['']='Kimeru';
 $string['']='Konkani';
 $string['']='Kinyakyusa-Ngonde';
 $string['']='Kikongo';
-$string['']='Korean';
 $string['']='Kpelle';
 $string['']='Krio';
 $string['']='Kru (Any)';
@@ -452,6 +453,9 @@ $string['']='Ndebele (Zimbabwe)';
 $string['']='Nepali';
 */
 $string['norwegian']='Norwegian';
+$string['romanian']='Romanian';
+$string['russian']='Russian';
+$string['slovak']='Slovak';
 /*
 $string['']='Nuer/Naadh';
 $string['']='Nupe';
@@ -473,7 +477,6 @@ $string['']='Panjabi (Any Other)';
 $string['']='Panjabi (Gurmukhi)';
 $string['']='Panjabi (Mirpuri)';
 $string['']='Panjabi (Pothwari)';
-$string['']='Polish';
 $string['']='Portuguese';
 $string['']='Portuguese (Any Other)';
 $string['']='Portuguese (Brazil)';
@@ -485,14 +488,12 @@ $string['']='Quechua';
 $string['']='Rajasthani/Marwari';
 $string['']='Romany/English Romanes';
 $string['']='Romani (International)';
-$string['']='Romanian';
 $string['']='Romanian (Moldova)';
 $string['']='Romanian (Romania)';
 $string['']='Romansch';
 $string['']='Runyakitara';
 $string['']='Runyankore-Ruchiga';
 $string['']='Runyoro-Rutooro';
-$string['']='Russian';
 $string['']='Samoan';
 $string['']='Serbian/Croatian/Bosnian';
 $string['']='Bosnian';
@@ -503,7 +504,6 @@ $string['']='Shilluk/Cholo';
 $string['']='Shona';
 $string['']='Sidamo';
 $string['']='Sign Language (Other)';
-$string['']='Slovak';
 $string['']='Slovenian';
 $string['']='Sindhi';
 $string['']='Sango';
