@@ -5,6 +5,7 @@ Option to BCC email messages to parents with student tutors.
 
 Message explanation line included on the to sender's copy.
 
+Display merit totals for a house on the report_merit page.
 
 
 Version ClaSS-1.0.7 release (2011/10/06)
